# hack_gpt

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  SECURITY.md  UNRESTRICTED_MODE.md  config.ini  conftest.py  demo.py  docker-compose.yml  hackgpt.py  hackgpt_v2.py  install.sh  package.json  pyproject.toml  requirements-ci.txt  requirements.txt  run_app.sh  run_unrestricted.sh  run_web.py  test_installation.py
.github/: SECURITY.md
.github/workflows/: ci.yml  codeql.yml  enterprise-ci.yml
HackGPTApp/: HackGPT.entitlements  IOS_SETUP.md  Package.swift  build_and_install.sh  desktop_build.sh  generate_icon.py  generate_icon.swift  project.yml
HackGPTApp/Sources/HackGPTApp/: CostControlManager.swift  CostControlView.swift  DataManager.swift  HackGPTApp.swift  KeychainManager.swift  SetupAssistant.swift
agent/: __init__.py  api.py  config.py  metering.py  openai_client.py  orchestrator.py  schemas.py  vector_store.py
agent/tools/: __init__.py
ai_engine/: __init__.py  advanced_engine.py
cloud/: __init__.py  docker_manager.py  kubernetes_manager.py  load_balancer.py  microservice_base.py  service_registry.py
database/: __init__.py  manager.py  models.py
exploitation/: __init__.py  advanced_engine.py  zero_day_detector.py
hackgpt_mcp/: __init__.py  kali_tools.py  server.py
hackgpt_mcp/prompts/: kali_system_prompt.md
inventory/: __init__.py  api.py  audit.py  config.py  diff_engine.py  models.py  policy_engine.py  privacy.py
inventory/adapters/: __init__.py  base.py  manual_import.py
mcp-kali-server/: Dockerfile  README.md  claude_desktop_config.example.json  mcp_server.py  requirements.txt
org/: _org_checklist.md  reusable-codeql.yml
performance/: __init__.py  cache_manager.py  load_balancer.py  optimization.py  parallel_processor.py  performance_monitor.py
reporting/: __init__.py  dynamic_reports.py  realtime_dashboard.py
security/: __init__.py  authentication.py  compliance.py  filesystem.py
templates/: agent_chat.html  dashboard.html
tests/: test_agent.py  test_config.py  test_core.py  test_enterprise.py  test_inventory.py  test_security.py
